--- a/client/css/style.css
+++ b/client/css/style.css
@@ -199,18 +199,16 @@ p {
 
 
 /* CUSTOM */
-#start-server {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-direction: column;
-}
+/* #start-server {
+    
+} */
 
 input {
     width: calc(100% - 2rem);
     padding: 1rem;
     outline: none;
 }
+
 select {
     background-color: #FFFFFF;
 
@@ -221,17 +219,18 @@ select {
     -moz-appearance: none;
     appearance: none;
     display: inline-block;
-    
+
     border-radius: 0px;
     overflow: hidden;
-    
+
     font-size: 13px;
     line-height: 26px;
     padding: .5rem 1rem;
     margin: 0;
 }
+
 button {
-    width: 100%;
+    width: 70%;
     overflow: hidden;
 
     padding: 1rem;
@@ -243,7 +242,6 @@ button {
     white-space: nowrap;
     text-decoration: none !important;
     text-transform: none;
-    text-transform: capitalize;
 
     color: #fff;
     border: 0 none;
@@ -254,21 +252,28 @@ button {
     line-height: 1.3;
 
     -webkit-appearance: none;
-    -moz-appearance:    none;
-    appearance:         none;
-    
+    -moz-appearance: none;
+    appearance: none;
+
     justify-content: center;
     align-items: center;
 
     background-color: #416dea;
-    
-    box-shadow: 2px 5px 10px #416dea;
 
+    box-shadow: 2px 5px 10px #416dea;
 }
+
+button#delete {
+    background-color: #e33e24;
+
+    box-shadow: 2px 5px 10px #e33e24;
+}
+
 img {
-    height:5rem;
-    width:5rem;
+    height: 5rem;
+    width: 5rem;
 }
+
 .mb {
     margin-bottom: 2rem;
 }
@@ -280,74 +285,89 @@ img {
 #server-starting {
     margin-top: 4rem;
 }
+
 .loading-text {
     text-align: center;
 }
+
 .lds-grid {
     display: inline-block;
     position: relative;
     width: 64px;
     height: 64px;
-  }
-  .lds-grid div {
+}
+
+.lds-grid div {
     position: absolute;
     width: 13px;
     height: 13px;
     border-radius: 50%;
     background: #212121;
     animation: lds-grid 1.2s linear infinite;
-  }
-  .lds-grid div:nth-child(1) {
+}
+
+.lds-grid div:nth-child(1) {
     top: 6px;
     left: 6px;
     animation-delay: 0s;
-  }
-  .lds-grid div:nth-child(2) {
+}
+
+.lds-grid div:nth-child(2) {
     top: 6px;
     left: 26px;
     animation-delay: -0.4s;
-  }
-  .lds-grid div:nth-child(3) {
+}
+
+.lds-grid div:nth-child(3) {
     top: 6px;
     left: 45px;
     animation-delay: -0.8s;
-  }
-  .lds-grid div:nth-child(4) {
+}
+
+.lds-grid div:nth-child(4) {
     top: 26px;
     left: 6px;
     animation-delay: -0.4s;
-  }
-  .lds-grid div:nth-child(5) {
+}
+
+.lds-grid div:nth-child(5) {
     top: 26px;
     left: 26px;
     animation-delay: -0.8s;
-  }
-  .lds-grid div:nth-child(6) {
+}
+
+.lds-grid div:nth-child(6) {
     top: 26px;
     left: 45px;
     animation-delay: -1.2s;
-  }
-  .lds-grid div:nth-child(7) {
+}
+
+.lds-grid div:nth-child(7) {
     top: 45px;
     left: 6px;
     animation-delay: -0.8s;
-  }
-  .lds-grid div:nth-child(8) {
+}
+
+.lds-grid div:nth-child(8) {
     top: 45px;
     left: 26px;
     animation-delay: -1.2s;
-  }
-  .lds-grid div:nth-child(9) {
+}
+
+.lds-grid div:nth-child(9) {
     top: 45px;
     left: 45px;
     animation-delay: -1.6s;
-  }
-  @keyframes lds-grid {
-    0%, 100% {
-      opacity: 1;
+}
+
+@keyframes lds-grid {
+
+    0%,
+    100% {
+        opacity: 1;
     }
+
     50% {
-      opacity: 0.5;
+        opacity: 0.5;
     }
-  }
-  
+}
